# Gwen

./: .gitignore  CLAUDE.md  COMPASS_FRAMEWORK_final.md  GWENIFESTO_final.md  GWEN_MEMORY_ARCHITECTURE.md  GWEN_TEMPORAL_COGNITION.md  README.md  SRS.md  progress.html  pyproject.toml
.claude/: settings.local.json
.conductor/: index.md  product.md  tech-stack.md  tracks.md  workflow.md
data/personalities/: gwen.yaml
gwen/: __init__.py  __main__.py
gwen/amygdala/: __init__.py  layer.py
gwen/autonomy/: __init__.py  decision.py  triggers.py
gwen/classification/: __init__.py  parser.py  rule_engine.py  tier0.py
gwen/compass/: __init__.py  classifier.py  skills.py  tracker.py
gwen/consolidation/: __init__.py  deep.py  light.py  standard.py
gwen/core/: __init__.py  context_assembler.py  model_manager.py  orchestrator.py  post_processor.py  session_manager.py
gwen/memory/: __init__.py  bond.py  chronicle.py  embeddings.py  palimpsest.py  pulse.py  retrieval.py  semantic_map.py  stream.py
gwen/models/: __init__.py  classification.py  emotional.py  memory.py  messages.py  personality.py  reconsolidation.py  safety.py  temporal.py
tests/: __init__.py  conftest.py  test_amygdala.py  test_chronicle.py  test_circadian.py  test_compass.py  test_context.py  test_embeddings.py  test_emotional_memory.py  test_live_integration.py  test_model_manager.py  test_models.py  test_modes.py  test_palimpsest.py  test_post_processing.py  test_rule_engine.py  test_safety.py  test_semantic_map.py  test_session.py  test_session_close.py  test_tier0_parser.py  test_tme.py
(+57 files in other folders)
